# spatialha

./: .devcontainer.json  .gitignore  LICENSE  README.md  hacs.json  pytest.ini  requirements_common.txt  requirements_dev.txt
.github/: _dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
components/spatialble/: __init__.py  example.yaml  spatialble_ble_server.cpp  spatialble_ble_server.h
config/: configuration.yaml
custom_components/spatialha/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json  websocket_api.py
custom_components/spatialha/frontend/: spatialha-panel.js
spatialble/: pyproject.toml  spatialble_client.py  spatialble_config.json  spatialble_config.json.template  spatialble_config.py  spatialble_decoders.py  spatialble_ota_server.py  spatialble_server.py
spatialble/data/: __init__.py
spatialble/esp32/: __init__.py  example.yaml  spatialble_ble_server.cpp  spatialble_ble_server.h
spatialble/network/: __init__.py
spatialble/ui/: __init__.py
tests/spatialble/: test_config.py  test_decoders.py
