[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "spatialble"
version = "1.0.0"
description = "BLE advertisement scanner and MQTT bridge"
requires-python = ">=3.10"
dependencies = [
    "bleak",
    "paho-mqtt",
    "pycryptodome",
]
